# plat-hack-decomp

./: .gitignore  README.md  meson.build
res/battle/moves/: meson.build
res/battle/moves/0468/: data.json
res/battle/moves/0469/: data.json
res/battle/moves/0470/: data.json
res/battle/moves/accelerock/: data.json
res/battle/moves/acid_armor/: data.json
res/battle/moves/acid_spray/: data.json
res/battle/moves/acrobatics/: data.json
res/battle/moves/acupressure/: data.json
res/battle/moves/aerial_ace/: data.json
res/battle/moves/aeroblast/: data.json
res/battle/moves/air_cutter/: data.json
res/battle/moves/air_slash/: data.json
res/battle/moves/aqua_jet/: data.json
res/battle/moves/aqua_tail/: data.json
res/battle/moves/arm_thrust/: data.json
res/battle/moves/assist/: anim.s  data.json
res/battle/moves/assurance/: data.json
res/battle/moves/attack_order/: data.json
res/battle/moves/aura_sphere/: data.json
res/battle/moves/aurora_veil/: data.json
res/battle/moves/avalanche/: data.json
res/battle/moves/baby_doll_eyes/: data.json
res/battle/moves/barrage/: data.json
res/battle/moves/barrier/: data.json
res/battle/moves/beat_up/: data.json
res/battle/moves/bide/: data.json
res/battle/moves/bind/: data.json
res/battle/moves/blast_burn/: data.json
res/battle/moves/blizzard/: data.json
res/battle/moves/block/: data.json
res/battle/moves/body_press/: data.json
res/battle/moves/bone_rush/: data.json
res/battle/moves/bonemerang/: data.json
res/battle/moves/boomburst/: data.json
res/battle/moves/bounce/: data.json
res/battle/moves/brave_bird/: data.json
res/battle/moves/brick_break/: data.json
res/battle/moves/brine/: data.json
res/battle/moves/bubble/: data.json
res/battle/moves/bug_bite/: data.json
res/battle/moves/bulldoze/: data.json
res/battle/moves/bullet_punch/: data.json
res/battle/moves/bullet_seed/: data.json
res/battle/moves/charge_beam/: data.json
res/battle/moves/charm/: data.json
res/battle/moves/chatter/: data.json
res/battle/moves/clamp/: data.json
res/battle/moves/close_combat/: data.json
res/battle/moves/comet_punch/: data.json
res/battle/moves/conversion/: data.json
res/battle/moves/copycat/: anim.s  data.json
res/battle/moves/cotton_spore/: anim.s  data.json
res/battle/moves/counter/: data.json
res/battle/moves/crabhammer/: data.json
res/battle/moves/cross_chop/: data.json
res/battle/moves/cross_poison/: data.json
res/battle/moves/crush_grip/: data.json
res/battle/moves/curse/: data.json
res/battle/moves/cut/: data.json
res/battle/moves/dark_pulse/: data.json
res/battle/moves/dark_void/: data.json
res/battle/moves/dazzling_gleam/: data.json
res/battle/moves/defog/: data.json
res/battle/moves/detect/: data.json
res/battle/moves/dig/: data.json
res/battle/moves/dire_claw/: data.json
res/battle/moves/disable/: data.json
res/battle/moves/disarming_voice/: data.json
res/battle/moves/discharge/: data.json
res/battle/moves/dive/: data.json
res/battle/moves/double_edge/: data.json
res/battle/moves/double_hit/: data.json
res/battle/moves/double_kick/: data.json
res/battle/moves/double_slap/: data.json
res/battle/moves/draco_meteor/: data.json
res/battle/moves/dragon_breath/: data.json
res/battle/moves/dragon_claw/: data.json
res/battle/moves/dragon_pulse/: data.json
res/battle/moves/dragon_rage/: data.json
res/battle/moves/dragon_rush/: data.json
res/battle/moves/dragon_tail/: data.json
res/battle/moves/drain_punch/: data.json
res/battle/moves/draining_kiss/: data.json
res/battle/moves/drill_peck/: data.json
res/battle/moves/drill_run/: data.json
res/battle/moves/dual_chop/: data.json
res/battle/moves/dual_wingbeat/: data.json
res/battle/moves/earth_power/: data.json
res/battle/moves/earthquake/: data.json
res/battle/moves/egg_bomb/: data.json
res/battle/moves/electroweb/: data.json
res/battle/moves/embargo/: data.json
res/battle/moves/encore/: data.json
res/battle/moves/endeavor/: data.json
res/battle/moves/endure/: data.json
res/battle/moves/energy_ball/: data.json
res/battle/moves/eruption/: data.json
res/battle/moves/explosion/: data.json
res/battle/moves/extrasensory/: data.json
res/battle/moves/extreme_speed/: data.json
res/battle/moves/faint_attack/: data.json
res/battle/moves/fake_out/: data.json
res/battle/moves/false_swipe/: anim.s  data.json
res/battle/moves/feint/: data.json
res/battle/moves/fell_stinger/: data.json
res/battle/moves/fire_blast/: data.json
res/battle/moves/fire_fang/: data.json
res/battle/moves/fire_spin/: data.json
res/battle/moves/first_impression/: data.json
res/battle/moves/flail/: data.json
res/battle/moves/flame_charge/: data.json
res/battle/moves/flamethrower/: data.json
res/battle/moves/flash_cannon/: data.json
res/battle/moves/flip_turn/: data.json
res/battle/moves/fly/: data.json
res/battle/moves/follow_me/: data.json
res/battle/moves/force_palm/: data.json
res/battle/moves/foresight/: data.json
res/battle/moves/foul_play/: data.json
res/battle/moves/freeze_dry/: data.json
res/battle/moves/frenzy_plant/: data.json
res/battle/moves/frost_breath/: data.json
res/battle/moves/frustration/: data.json
res/battle/moves/fury_attack/: data.json
res/battle/moves/fury_cutter/: data.json
res/battle/moves/fury_swipes/: data.json
res/battle/moves/future_sight/: anim.s  data.json
res/battle/moves/giga_drain/: data.json
res/battle/moves/giga_impact/: data.json
res/battle/moves/glare/: data.json
res/battle/moves/grass_knot/: data.json
res/battle/moves/growth/: data.json
res/battle/moves/gunk_shot/: data.json
res/battle/moves/gust/: data.json
res/battle/moves/gyro_ball/: data.json
res/battle/moves/hammer_arm/: data.json
res/battle/moves/head_smash/: data.json
res/battle/moves/heal_block/: data.json
res/battle/moves/healing_wish/: data.json
res/battle/moves/heat_wave/: data.json
res/battle/moves/heavy_slam/: data.json
res/battle/moves/hex/: data.json
res/battle/moves/howl/: data.json
(+1755 files in other folders)
