pl_waza_tbl_subdirs = [
    '0000',
    '0468',
    '0469',
    '0470',
    'absorb',
    'accelerock',
    'acid',
    'acid_armor',
    'acid_spray',
    'acrobatics',
    'aerial_ace',
    'aeroblast',
    'agility',
    'air_cutter',
    'air_slash',
    'amnesia',
    'ancient_power',
    'aqua_jet',
    'aqua_ring',
    'aqua_tail',
    'arm_thrust',
    'aromatherapy',
    'psyshock',
    'assurance',
    'astonish',
    'attack_order',
    'attract',
    'aura_sphere',
    'aurora_beam',
    'aurora_veil',
    'avalanche',
    'baby_doll_eyes',
    'barrage',
    'baton_pass',
    'beat_up',
    'belly_drum',
    'bite',
    'blast_burn',
    'blaze_kick',
    'blizzard',
    'body_press',
    'body_slam',
    'bone_club',
    'bonemerang',
    'bone_rush',
    'boomburst',
    'bounce',
    'brave_bird',
    'brick_break',
    'brine',
    'bubble',
    'bubble_beam',
    'bug_bite',
    'bug_buzz',
    'bulk_up',
    'bulldoze',
    'bullet_punch',
    'bullet_seed',
    'calm_mind',
    'captivate',
    'charge',
    'charge_beam',
    'charm',
    'chatter',
    'clamp',
    'close_combat',
    'comet_punch',
    'confuse_ray',
    'confusion',
    'cosmic_power',
    'cotton_spore',
    'counter',
    'crabhammer',
    'cross_chop',
    'cross_poison',
    'crunch',
    'crush_claw',
    'curse',
    'cut',
    'dark_pulse',
    'dark_void',
    'defend_order',
    'defense_curl',
    'defog',
    'destiny_bond',
    'detect',
    'dig',
    'dire_claw',
    'disable',
    'disarming_voice',
    'discharge',
    'dive',
    'dizzy_punch',
    'double_edge',
    'double_hit',
    'double_kick',
    'double_slap',
    'double_team',
    'draco_meteor',
    'dragon_breath',
    'dragon_claw',
    'dragon_dance',
    'dragon_pulse',
    'dragon_rage',
    'dragon_rush',
    'dragon_tail',
    'draining_kiss',
    'drain_punch',
    'dream_eater',
    'drill_peck',
    'drill_run',
    'dual_chop',
    'dual_wingbeat',
    'dynamic_punch',
    'earth_power',
    'earthquake',
    'egg_bomb',
    'electroweb',
    'ember',
    'encore',
    'endeavor',
    'endure',
    'energy_ball',
    'eruption',
    'explosion',
    'extrasensory',
    'extreme_speed',
    'facade',
    'fake_out',
    'fake_tears',
    'feather_dance',
    'feint',
    'faint_attack',
    'fire_blast',
    'fire_fang',
    'fire_punch',
    'fire_spin',
    'first_impression',
    'flail',
    'flame_charge',
    'flamethrower',
    'flame_wheel',
    'flare_blitz',
    'flash',
    'flash_cannon',
    'flatter',
    'fling',
    'flip_turn',
    'fly',
    'focus_blast',
    'focus_energy',
    'focus_punch',
    'follow_me',
    'force_palm',
    'freeze_dry',
    'frenzy_plant',
    'frost_breath',
    'fury_attack',
    'fury_cutter',
    'fury_swipes',
    'gastro_acid',
    'giga_drain',
    'giga_impact',
    'glare',
    'grass_knot',
    'grass_whistle',
    'gravity',
    'growl',
    'growth',
    'gunk_shot',
    'gust',
    'gyro_ball',
    'hail',
    'hammer_arm',
    'harden',
    'haze',
    'headbutt',
    'head_smash',
    'heal_bell',
    'heal_order',
    'heart_swap',
    'heat_wave',
    'heavy_slam',
    'helping_hand',
    'hex',
    'hidden_power',
    'hi_jump_kick',
    'horn_attack',
    'howl',
    'hurricane',
    'hydro_cannon',
    'hydro_pump',
    'hyper_beam',
    'hyper_fang',
    'hyper_voice',
    'hypnosis',
    'ice_ball',
    'ice_beam',
    'ice_fang',
    'ice_punch',
    'ice_shard',
    'icicle_spear',
    'icy_wind',
    'infestation',
    'ingrain',
    'iron_defense',
    'iron_head',
    'iron_tail',
    'judgment',
    'jump_kick',
    'karate_chop',
    'knock_off',
    'last_resort',
    'lava_plume',
    'leaf_blade',
    'leaf_storm',
    'leech_life',
    'leech_seed',
    'leer',
    'lick',
    'life_dew',
    'light_screen',
    'liquidation',
    'lock_on',
    'lovely_kiss',
    'low_kick',
    'lunge',
    'luster_purge',
    'mach_punch',
    'magical_leaf',
    'magic_coat',
    'magma_storm',
    'magnet_bomb',
    'magnet_rise',
    'magnitude',
    'mean_look',
    'meditate',
    'mega_drain',
    'megahorn',
    'memento',
    'metal_burst',
    'metal_claw',
    'metal_sound',
    'meteor_beam',
    'meteor_mash',
    'metronome',
    'mimic',
    'minimize',
    'mirror_coat',
    'mirror_shot',
    'mist',
    'mist_ball',
    'moonblast',
    'moonlight',
    'morning_sun',
    'mud_bomb',
    'muddy_water',
    'mud_shot',
    'mud_slap',
    'nasty_plot',
    'natural_gift',
    'nature_power',
    'needle_arm',
    'nightmare',
    'night_shade',
    'night_slash',
    'nuzzle',
    'octazooka',
    'odor_sleuth',
    'ominous_wind',
    'outrage',
    'overheat',
    'pain_split',
    'parabolic_charge',
    'parting_shot',
    'payback',
    'peck',
    'perish_song',
    'petal_dance',
    'pin_missile',
    'play_rough',
    'pluck',
    'poison_fang',
    'poison_gas',
    'poison_jab',
    'poison_powder',
    'poison_sting',
    'poison_tail',
    'pound',
    'powder_snow',
    'power_gem',
    'power_up_punch',
    'power_whip',
    'present',
    'protect',
    'psybeam',
    'psychic',
    'psycho_boost',
    'psycho_cut',
    'psycho_shift',
    'psych_up',
    'psywave',
    'punishment',
    'pursuit',
    'quick_attack',
    'quiver_dance',
    'rage',
    'rain_dance',
    'rapid_spin',
    'razor_leaf',
    'recover',
    'recycle',
    'reflect',
    'rest',
    'return',
    'revenge',
    'reversal',
    'roar',
    'roar_of_time',
    'rock_blast',
    'rock_climb',
    'rock_polish',
    'rock_slide',
    'rock_smash',
    'rock_throw',
    'rock_tomb',
    'rock_wrecker',
    'role_play',
    'rolling_kick',
    'rollout',
    'roost',
    'sacred_fire',
    'safeguard',
    'sand_attack',
    'sandstorm',
    'sand_tomb',
    'scald',
    'scary_face',
    'scratch',
    'screech',
    'secret_power',
    'seed_bomb',
    'seed_flare',
    'seismic_toss',
    'selfdestruct',
    'shadow_ball',
    'shadow_claw',
    'shadow_force',
    'shadow_punch',
    'shadow_sneak',
    'sharpen',
    'shell_smash',
    'shock_wave',
    'signal_beam',
    'silk_trap',
    'silver_wind',
    'sing',
    'sketch',
    'skill_swap',
    'sky_attack',
    'sky_uppercut',
    'slack_off',
    'slash',
    'sleep_powder',
    'sleep_talk',
    'sludge',
    'sludge_bomb',
    'sludge_wave',
    'smelling_salt',
    'smoke_screen',
    'snarl',
    'snatch',
    'snore',
    'softboiled',
    'solar_beam',
    'solar_blade',
    'sonic_boom',
    'spacial_rend',
    'spark',
    'sticky_web',
    'spike_cannon',
    'spikes',
    'spiky_shield',
    'spite',
    'spit_up',
    'splash',
    'spore',
    'stealth_rock',
    'steel_beam',
    'steel_wing',
    'stockpile',
    'stomp',
    'stone_edge',
    'stored_power',
    'strength',
    'string_shot',
    'struggle',
    'struggle_bug',
    'stun_spore',
    'submission',
    'substitute',
    'sucker_punch',
    'sunny_day',
    'super_fang',
    'superpower',
    'supersonic',
    'surf',
    'swagger',
    'swallow',
    'sweet_kiss',
    'sweet_scent',
    'swift',
    'swords_dance',
    'synthesis',
    'tackle',
    'tail_glow',
    'tail_slap',
    'tail_whip',
    'tailwind',
    'take_down',
    'taunt',
    'teeter_dance',
    'teleport',
    'thrash',
    'thunder',
    'thunderbolt',
    'thunder_fang',
    'thunder_punch',
    'thunder_shock',
    'thunder_wave',
    'tickle',
    'torment',
    'toxic',
    'toxic_spikes',
    'transform',
    'tri_attack',
    'trick',
    'trick_room',
    'triple_axel',
    'triple_kick',
    'trump_card',
    'twineedle',
    'twister',
    'uproar',
    'u_turn',
    'vacuum_wave',
    'venoshock',
    'vice_grip',
    'vine_whip',
    'vital_throw',
    'volt_switch',
    'volt_tackle',
    'wake_up_slap',
    'waterfall',
    'water_gun',
    'water_pulse',
    'water_spout',
    'weather_ball',
    'whirlwind',
    'wild_charge',
    'will_o_wisp',
    'wing_attack',
    'wish',
    'withdraw',
    'wood_hammer',
    'wrap',
    'x_scissor',
    'yawn',
    'zap_cannon',
    'zen_headbutt',
    'zing_zap',
]

pl_waza_tbl_data_srcs = []
foreach subdir : pl_waza_tbl_subdirs
    pl_waza_tbl_data_srcs += subdir / 'data.json'
endforeach

pl_waza_tbl_narc = custom_target('pl_waza_tbl.narc',
    output: 'pl_waza_tbl.narc',
    input: pl_waza_tbl_data_srcs,
    env: json2bin_env,
    depends: [ py_consts_generators ],
    command: [
        movedata_py,
        '--narc', narc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
    ]
)

nitrofs_files += pl_waza_tbl_narc
